--- a/src/css/SignIn.css
+++ b/src/css/SignIn.css
@@ -321,9 +321,9 @@ a {
     min-height: 600px;
     position: relative;
     /* background: url(../images/banner.jpg) no-repeat center; */
-    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%); 
+    /* background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);  */
     /* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
-    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
+    /* box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19); */
 }
 
 .signup-wrap {
@@ -332,9 +332,9 @@ a {
     min-height: 1520px;
     position: relative;
     /* background: url(../images/banner.jpg) no-repeat center; */
-    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%); 
+    /* background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);  */
     /* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
-    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
+    /* box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19); */
 }
 
 .main_w3agile {
@@ -343,9 +343,9 @@ a {
     position: absolute;
     padding: 5em;
     /* background: rgba(255, 255, 255, 0.83); */
-    -webkit-box-shadow: 0px 6px 11px 1px rgba(0, 0, 0, 0.17);
+    /* -webkit-box-shadow: 0px 6px 11px 1px rgba(0, 0, 0, 0.17);
     -moz-box-shadow: 0px 6px 11px 1px rgba(0, 0, 0, 0.17);
-    box-shadow: 12px -12px 0px 0px rgba(251, 251, 251, 0.24);
+    box-shadow: 12px -12px 0px 0px rgba(251, 251, 251, 0.24); */
 }
 
 .main_w3agile .signin_wthree,
@@ -405,8 +405,9 @@ a {
 
 .login-form .group .input,
 .login-form .group .button {
-    border: none;
-    border-bottom: 1px solid #1fcdb4;
+    /* border: none; */
+    border: 1px solid #1fcdb4;
+    /* border-bottom: 1px solid #1fcdb4; */
     padding: 15px 20px;
     border-radius: 25px;
     background: rgba(255, 255, 255, 0.54);
